Finalized project. Fixed bug where on page load the webpage content would sit in a single collumn in the middle. Making it unreadable. This final version is complete and fully integrated to meet assignment requirments

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,15 +1,93 @@
-
+/* Animated Backround */
 :root {
     background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
-    --header-backround: rgb(64, 70, 75);
-    --alternate-color: rgba(240, 100, 246, 1);
-    --fade-start: rgba(240, 100, 246, .03);
-    --fade-end: rgba(240, 100, 246, .6);
-    --text-color: white;
-    --standard-border-radius:50px;
+    font-style:oblique;
+    font-weight: 200;
+    
 
+}
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: OCR A Std, monospace;
+
+}
+
+header {
+    display: block;
+    text-align: center;
+    padding: 2%;
+    font-size: larger;
+}
+
+header p {
+    font-size: x-large;
+}
+
+h1 {
+    padding: 2%;
+}
+
+.content {
+    display: grid;
+    width: 100%;
+    grid-template-columns:
+        repeat(3, 1fr);
+    padding: 2%;
+    text-align: center;
+}
+
+.snippet {
+    border-radius: 8px;
+    background-image: linear-gradient(#51d1e7, #dea474);
+    -webkit-user-select: all;
+    user-select: all;
+}
+
+.card {
+    max-width: 100%;
+    border: #E9C46A groove 5px;
+    padding: 2%;
+    display: inline-flex;
+    flex-direction: row;
+    margin: 20px;
+}
+
+.card_header {
+    position: relative;
+    top: -32px;
+    left: 5%;
+    border: #2A9D8F outset 5px;
+    width: 90%;
+    align-items: center;
+    font-size: 24px;
+    font-weight: bolder;
+    font-family: Marker Felt, fantasy;
+    background-color: #61c0e6;
+    border-radius: 8px;
+    transition: 0.7s ease-in-out;
+}
+
+.card_header:hover {
+    background-color: #28a575;
+    color: rgb(8, 8, 8);
+}
+                        
+.card_content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    flex: 1;
+    font-family: cursive;
+    font-weight: bold;
+}
+
+footer {
+    text-align: center;
 }
 
 @keyframes gradient {
@@ -23,113 +101,22 @@
         background-position: 0% 50%;
     }
 }
-* {
-    box-sizing:border-box;
-    font-family:sans-serif;
-  }
-  
-  body {
-    font-size: 16px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--header-backgroud);
-  }
-  
-  h1 {
-    font-size: 2.5rem;
-    margin-bottom: 10px;
-  }
 
-  header {
-    width: 100vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding: 40px;
-    text-align: center;
-    background: var(--header-backgroud);
-    color: var(--alternate-color);
-  }
-  header p {
-    color: var(--text-color)
-  }
-  
-  main {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-  }
-  
-  footer {
-    width: 100%;
-    bottom: 0;
-    padding: 20px;
-    text-align: center;
-    background: var(--header-backgroud);
-    color: var(--alternate-color);
-    margin-top: auto;
-  }
 
-  pre {
-    color: var(--text-color);
-    font-size: 13px;
-    font-family:'Courier New', Courier, monospace;
-    border-radius: 5px;
-    background: linear-gradient(var(--fade-start), var(--fade-end));
-    margin:3px;
-    padding: 10px;
-    -webkit-user-select: all;
-    -ms-user-select: all;
-    user-select: all;
-  }
-  
-  .card {
-    border-style: dashed;
-    border-color: var(--text-color);
-    border-width: 1px;
-    width: 30%;
-    padding: 10px;
-    margin: 1%;
-    color: var(--alternate-color);
-  }
 
-  .card h2 {
-    position: relative;
-    margin-top: -20px;
-    border-style: solid;
-    border-color: var(--text-color);
-    border-radius: 5px;
-    background-color: var(--header-backgroud);
-    border-width: 1px;
-    padding: 3px;
-  }
-
-  .card h2 {
-    border-radius: 8px;
-    transition: all 0.5s ease-in-
-  out;
-  }
-  
-  .card:hover,
-  .card:hover h2 {
-    box-shadow: inset 0px 0px 8px
-  var(--alternate-color), 0 0 15px
-  var(--alternate-color);
-  }
-
-media screen and (max-width: 992px) {
-    .card{
-        display: flex;
-        flex-direction: column;
+@media screen and (max-width:768px) {
+    .card {
+        display: grid;
+        width: 50%;
+        grid-template-columns:
+            repeat(1fr 1fr);
     }
-
 }
-@media screen and (max-width: 768px) {
-    .card{
-        max-width:100%
-    }
 
+@media screen and (max-width:576px) {
+    .card {
+        display: grid;
+        width: 100%;
+        grid-column: 1;
+    }
 }
